fix message threading when message-id is on a continuation line, r=neil, bug 676916